[gd_scene load_steps=2 format=3 uid="uid://t32dcjumg101"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_w4v2y"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("1_w4v2y")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 175)
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 225.0
offset_bottom = 196.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Local" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Local"
alignment = 0

[node name="Online" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Online - Coming Soon"
alignment = 0

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options - Coming Soon"
alignment = 0

[node name="Extras" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Extras - Coming Soon"
alignment = 0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Local")
text = "Exit"
alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Local" to="." method="_on_local_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Online" to="." method="_on_online_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Extras" to="." method="_on_extras_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
